name:          data-lens
category:      Control, Comonads
version:       3.0
license:       BSD3
cabal-version: >= 1.6
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/data-lens/
copyright:     Copyright (C) 2008-2011 Edward A. Kmett
synopsis:      Composable purely functional references
description:   Composable purely functional references
build-type:    Simple

source-repository head
  type: git
  location: git://github.com/ekmett/data-lens.git

flag Rank2Types
  manual: False
  default: True

flag UnboxedTuples
  manual: False
  default: True

library
  build-depends: 
    base >= 4 && < 5,
    containers >= 0.3 && < 0.5,
    transformers >= 0.2.0 && <= 0.3

  if flag(Rank2Types)
    extensions: Rank2Types
    cpp-options: -DLANGUAGE_Rank2Types
    exposed-modules: Data.Lens.CPS

  if flag(UnboxedTuples)
    extensions: UnboxedTuples
    cpp-options: -DLANGUAGE_UnboxedTuples
    exposed-modules: Data.Lens.Unboxed

  extensions: CPP

  exposed-modules:
    Data.Lens.Class
    Data.Lens.Class.Internal
    Data.Lens.Combinators
    Data.Lens.Combinators.Trans.State.Lazy
    Data.Lens.Combinators.Trans.State.Strict
    Data.Lens.Common
    Data.Lens.Simple

  other-modules
    Data.Lens.Util

  ghc-options: -Wall -O2 -fspec-constr

